; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_variables.c_Lookup.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_variables.c_Lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@varcmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @Lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Lookup(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8**, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call %struct.TYPE_3__* @vlc_internals(i32* %7)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %5, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = call i32 @vlc_mutex_lock(i32* %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* @varcmp, align 4
  %15 = call i8** @tfind(i8** %4, i32* %13, i32 %14)
  store i8** %15, i8*** %6, align 8
  %16 = load i8**, i8*** %6, align 8
  %17 = icmp ne i8** %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i8**, i8*** %6, align 8
  %20 = load i8*, i8** %19, align 8
  br label %22

21:                                               ; preds = %2
  br label %22

22:                                               ; preds = %21, %18
  %23 = phi i8* [ %20, %18 ], [ null, %21 ]
  ret i8* %23
}

declare dso_local %struct.TYPE_3__* @vlc_internals(i32*) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i8** @tfind(i8**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
